Refactor: small cleanup of TransitModelIndex