@@ -350,7 +350,7 @@ public class DefaultTransitService implements TransitEditorService {
   public Collection<TripPattern> getPatternsForRoute(Route route) {
     OTPRequestTimeoutException.checkForTimeout();
     Collection<TripPattern> tripPatterns = new HashSet<>(
-      transitModelIndex.getPatternsForRoute().get(route)
+      transitModelIndex.getPatternsForRoute(route)
     );
     TimetableSnapshot currentSnapshot = lazyGetTimeTableSnapShot();
     if (currentSnapshot != null) {
@@ -551,17 +551,17 @@ public class DefaultTransitService implements TransitEditorService {
   }
 
   @Override
-  public TripOnServiceDate getTripOnServiceDateById(FeedScopedId datedServiceJourneyId) {
+  public TripOnServiceDate getTripOnServiceDateById(FeedScopedId tripOnServiceDateId) {
     TimetableSnapshot currentSnapshot = lazyGetTimeTableSnapShot();
     if (currentSnapshot != null) {
       TripOnServiceDate tripOnServiceDate = currentSnapshot.getRealTimeAddedTripOnServiceDateById(
-        datedServiceJourneyId
+        tripOnServiceDateId
       );
       if (tripOnServiceDate != null) {
         return tripOnServiceDate;
       }
     }
-    return transitModelIndex.getTripOnServiceDateById().get(datedServiceJourneyId);
+    return transitModel.getTripOnServiceDateById(tripOnServiceDateId);
   }
 
   @Override
@@ -569,13 +569,11 @@ public class DefaultTransitService implements TransitEditorService {
     TimetableSnapshot currentSnapshot = lazyGetTimeTableSnapShot();
     if (currentSnapshot != null) {
       return new CollectionsView<>(
-        transitModelIndex.getTripOnServiceDateForTripAndDay().values(),
+        transitModel.getAllTripOnServiceDates(),
         currentSnapshot.listRealTimeAddedTripOnServiceDate()
       );
     }
-    return Collections.unmodifiableCollection(
-      transitModelIndex.getTripOnServiceDateForTripAndDay().values()
-    );
+    return Collections.unmodifiableCollection(transitModel.getAllTripOnServiceDates());
   }
 
   @Override
@@ -591,7 +589,7 @@ public class DefaultTransitService implements TransitEditorService {
         return tripOnServiceDate;
       }
     }
-    return transitModelIndex.getTripOnServiceDateForTripAndDay().get(tripIdAndServiceDate);
+    return transitModelIndex.getTripOnServiceDateForTripAndDay(tripIdAndServiceDate);
   }
 
   /**
@@ -603,12 +601,7 @@ public class DefaultTransitService implements TransitEditorService {
   @Override
   public List<TripOnServiceDate> getTripOnServiceDates(TripOnServiceDateRequest request) {
     Matcher<TripOnServiceDate> matcher = TripOnServiceDateMatcherFactory.of(request);
-    return transitModelIndex
-      .getTripOnServiceDateForTripAndDay()
-      .values()
-      .stream()
-      .filter(matcher::match)
-      .collect(Collectors.toList());
+    return getAllTripOnServiceDates().stream().filter(matcher::match).toList();
   }
 
   /**
